2008-02-07  Ross Burton  <ross@openedhand.com>

	* applets/systray/Makefile.am:
	* applets/systray/systray.c:
	Don't bother using libnotify for the balloon messages, nothing
	uses them.

2008-02-06  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Look for DBus

	* applets/Makefile:
	* applets/notify/*:
	Basic notification-daemon implementation as an applet.  Needs
	work, but its usable.

2008-02-04  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* applets/Makefile.am:
	* applets/brightness/*:
	Add a brightness applet, thanks Manuel Teira.

2008-02-01  Thomas Wood  <thomas@openedhand.com>

	* applets/windowselector/mb-applet-windowselector.png:
	Updated icon

2008-01-17  Ross Burton  <ross@openedhand.com>

	* applets/systray/na-tray-manager.c:
	Add extra cast to silence compiler.

2008-01-17  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	* applets/Makefile.am:
	* applets/startup-notify/Makefile.am:
	* applets/startup-notify/startup.c:
	Add new startup notification applet which uses libnotify instead
	of appearing in the panel.

2007-12-13  Ross Burton  <ross@openedhand.com>

	* applets/launcher/launcher.c:
	* applets/showdesktop/showdesktop.c:
	* applets/clock/clock.c:
	Clear freshly allocated structures just to be safe.

2007-12-13  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Fix stupid mistake in previous commit which removed an atom.

2007-11-28  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Intern the atoms in a single call instead of many calls.

2007-11-28  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Mark more strings for translation, include config.h, and fix
	indentation.

2007-11-28  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Fix typo.

2007-10-11  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Use AC_HELP_STRING, make the help output reflect reality, and fix
	building without libstartup-notification.

2007-08-08  Rob Bradford  <rob@openedhand.com>
